fix contrast on loginPanel

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -753,6 +753,9 @@ h1
   border: 1px solid #ccc
   .loading
     display: none
+  .contrast &
+    background-color: #000
+
 .login,
 .signup
   text-align: left
